<resources>
    <string name="app_name">BrewMoment</string>
    <string name="choose_recipe">Choose a recipe:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Brew Moment</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_results">Results</string>
    <string name="menu_history">History</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_my_account">My account</string>
    <string name="menu_account">Account</string>

    <string name="aeropress_tile">Aeropress</string>
    <string name="eq_type_aeropress">Aeropress</string>
    <string name="eq_type_drip">Drip</string>
    <string name="drip_tile">Drip</string>
    <string name="eq_type_french">French press</string>
    <string name="eq_type_chemex">Chemex</string>
    <string name="brew_activity">Brew coffee</string>
    <string name="my_recipes">My recipes</string>
    <string name="users_recipes">Users recipes</string>
    <string name="brew_time">Total brewing time: %1$s</string>
    <string name="author">Author: %1$s</string>
    <string name="title_activity_recipes_tabs">RecipesTabsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="account">Account</string>
    <string name="recipe_details_title">Recipe</string>
    <string name="brew_title">Brew</string>
    <string name="chosen_recipe_title">%1$s</string>
    <string name="chosen_recipe_eq">Recipe for %1$s</string>
    <string name="chosen_recipe_description">%1$s</string>
    <string name="chosen_recipe_author">Author: %1$s</string>
    <string name="chosen_recipe_grind_level">Grind level: %1$s</string>
    <string name="chosen_recipe_brew_time">Brew time: %1$s</string>
    <string name="chosen_recipe_brew_button">START BREWING</string>
    <string name="chosen_recipe_steps">Steps: %1$s</string>
    <string name="recipes_item_title">Recipes</string>
    <string name="menu_my_recipes">My recipes</string>
    <string name="menu_common_recipes">Common recipes</string>
    <string name="menu_users_recipes">Users recipes</string>
    <string name="menu_aeropress_recipes">Aeropress recipes</string>
    <string name="menu_drip_recipes">Drip recipes</string>
    <string name="menu_chemex_recipes">Chemex recipes</string>
    <string name="menu_french_press_recipes">French press recipes</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="chosen_recipe_brew_temperature">Water temperature: %1$s</string>
    <string name="back_text">back</string>
    <string name="next_text">next</string>
    <string name="finish">FINISH</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="result_title">Result</string>
    <string name="brew_finished">Brew finished!</string>
    <string name="total_brew_time">Total brew time: %1$s</string>
    <string name="rate_coffee_text">How do you rate your coffee?</string>
    <string name="notes">Notes:</string>
    <string name="save_button">Save</string>
    <string name="save_as_favourite">Add to favourites</string>
    <string name="coffee_used">*Coffee used:</string>
    <string name="name_of_the_blend_hint">Name of the blend</string>
    <string name="describe_your_experience_hint">Describe your experience</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="menu_create_recipes">Create a recipe</string>
    <string name="title_text_view">*Recipe name: </string>
    <string name="my_recipe_hint">My recipe</string>
    <string name="description_text_view">Description:</string>
    <string name="desc_text_hint">Short description of a recipe</string>
    <string name="equipment_text_view">Equipment:</string>
    <string name="aeropress_radio_button">Aeropress</string>
    <string name="drip_radio_button">Drip</string>
    <string name="french_press_radio_button">French Press</string>
    <string name="brew_time_text_view">*Brew time:</string>
    <string name="colon">:</string>
    <string name="grind_level_text_view">Grind level:</string>
    <string name="choose_grind_level">Choose grind level</string>
    <string name="water_temperature_text_view">*Water temperature: </string>
    <string name="degree_celcius">°C</string>
    <string name="doze_text_view">*Dose:</string>
    <string name="g">g</string>
    <string name="next_button"><![CDATA[NEXT >>]]></string>
    <string name="start_brewing_text_view">Start brewing:</string>
    <string name="or_create_a_recipe_text_view">or create a recipe:</string>
    <string name="create_recipe">Create a recipe</string>
    <string name="save_and_share">Save and share</string>
    <string name="save">save</string>
    <string name="back_button"><![CDATA[<< BACK]]></string>
    <string name="step_type_text_view">Step type:</string>
    <string name="pour_water_amount">*Amount:</string>
    <string name="_100">100</string>
    <string name="ml">ml</string>
    <string name="_for">*For</string>
    <string name="_30">30</string>
    <string name="mcolon">m:</string>
    <string name="s">s</string>
    <string name="m">m</string>
    <string name="your_tips">Your tips:</string>
    <string name="give_user_a_hint">Give user a hint</string>
    <string name="seconds">seconds.</string>
    <string name="wait_until">*Wait until: </string>
    <string name="your_step">*Your step:</string>
    <string name="describe_your_step">Describe your step</string>
    <string name="my_results">My results:</string>
    <string name="users_results">Users\' results:</string>
    <string name="result_coffee_used">Coffee used: %1$s</string>
    <string name="result_total_brew_time">Total brew time: %1$s:%2$s</string>
    <string name="result_notes">Notes: %1$s</string>
    <string name="chemex_tile">Chemex</string>
    <string name="results">Results</string>
    <string name="menu_my_results">My brew results</string>
    <string name="menu_users_results">Users\' brew results</string>
    <string name="address_email_hint">address@email.com</string>
    <string name="password_hint">Password</string>
    <string name="log_in">SIGN IN</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="logged_in_as">Logged in as %1$s</string>
    <string name="log_out_button">LOG OUT</string>
    <string name="common_recipes">Common recipes</string>
    <string name="no_data_available">No recipes available</string>
    <string name="not_logged_in">You have to be signed in to display this content.</string>
    <string name="username">Username</string>
    <string name="no_results_available">No results available</string>
    <string name="choose_equipment">Choose the equipment</string>
    <string name="recipe_used">Recipe: %1$s</string>
    <string name="loading_data">Loading data...</string>
    <string name="author_text">Author: %1$s</string>
    <string name="result_author">Author: %1$s</string>
    <string name="exit">Exit</string>
    <string name="other">Other</string>
    <string name="about">About</string>
    <string name="aeropress_icon_made_by_ddara_from_www_flaticon_com">Aeropress icon made by dDara from www.flaticon.com</string>
    <string name="drip_icon_made_by_photo3idea_studio_from_www_flaticon_com">Drip icon made by photo3idea-studio from www.flaticon.com</string>
    <string name="chemex_icon_made_by_nhor_phai_from_www_flaticon_com">Chemex icon made by nhor-phai from www.flaticon.com</string>
    <string name="french_press_icon_made_by_freepik_from_www_flaticon_com">French press icon and app logo made by freepik from www.flaticon.com</string>
    <string name="created_by_micha_belniak">App created by Michał Belniak.</string>
    <string name="menu_about">About</string>
    <string name="chosen_recipe_brew_dose">Dose: %1$s</string>
    <string name="chosen_recipe_brew_total_water">Total water: %1$s</string>
    <string name="total_water">*Total water:</string>
    <string name="frenchpress_tile">Frenchpress tile</string>
    <string-array name="steps">
        <item>Pour water over</item>
        <item>Stir</item>
        <item>Wait</item>
        <item>Press</item>
        <item>Custom step</item>
    </string-array>
    <string-array name="grind_levels">
        <item></item>
        <item>Stir</item>
        <item>Wait</item>
        <item>Press</item>
        <item>Custom step</item>
    </string-array>

</resources>
