<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_menu_recipes"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_results"
            android:icon="@drawable/ic_menu_results"
            android:title="@string/menu_results" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_my_account"
                android:icon="@drawable/ic_my_account"
                android:title="@string/menu_my_account" />
            <item
                android:id="@+id/nav_log_out"
                android:title="@string/menu_logout" />
            <item
                android:id="@+id/nav_log_in"
                android:title="@string/menu_login"
                android:visible="false"/>
        </menu>
    </item>

</menu>
