<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rubik.brewmoment.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_recipes"
        android:name="com.rubik.brewmoment.ui.recipes.MyRecipesFragment"
        android:label="@string/menu_my_recipes"
        tools:layout="@layout/fragment_recipes_list" />

    <fragment
        android:id="@+id/nav_common_recipes"
        android:name="com.rubik.brewmoment.ui.recipes.CommonRecipesFragment"
        android:label="@string/menu_common_recipes"
        tools:layout="@layout/fragment_recipes_list" />

    <fragment
        android:id="@+id/nav_users_recipes"
        android:name="com.rubik.brewmoment.ui.recipes.UsersRecipesFragment"
        android:label="@string/menu_users_recipes"
        tools:layout="@layout/fragment_recipes_list" />

    <fragment
        android:id="@+id/nav_results"
        android:name="com.rubik.brewmoment.ui.results.ResultsFragment"
        android:label="@string/menu_results"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_my_account"
        android:name="com.rubik.brewmoment.ui.my_account.MyAccountFragment"
        android:label="@string/menu_my_account"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_log_in"
        android:name="com.rubik.brewmoment.ui.login.LogInFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_log_out"
        android:name="com.rubik.brewmoment.ui.logout.LogOutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_send" />
</navigation>