<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <TextView
        android:id="@+id/created_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:text="@string/created_by_micha_belniak" />

    <TextView
        android:id="@+id/aeropress_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="@string/aeropress_icon_made_by_ddara_from_www_flaticon_com" />
    <TextView
        android:id="@+id/drip_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="@string/drip_icon_made_by_photo3idea_studio_from_www_flaticon_com" />
    <TextView
        android:id="@+id/chemex_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="@string/chemex_icon_made_by_nhor_phai_from_www_flaticon_com" />
    <TextView
        android:id="@+id/french_press_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="@string/french_press_icon_made_by_freepik_from_www_flaticon_com" />
    <TextView
        android:id="@+id/thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="I gratefully acknowledge Tomasz Słuszniak for his sincere support."/>
</LinearLayout>